--- a/users/templates/users/layout.html
+++ b/users/templates/users/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/user.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" croorigin>
     <link href="https://fonts.googleapis.com/c2?family=Niramit&family=Roboto&display=swap" rel="stylesheet">    
