--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -29,7 +29,7 @@
                                 <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
                             </div>
                             <div id="register-link" class="text-right">
-                                <a href="/home/adduser/" class="text-info">Register here</a> <br><br>
+                                <a href="/users/signup" class="text-info">Register here</a> <br><br>
 								<a href="/admin" class="text-info">Admin login here</a>
                             </div>
                         </form>
